--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                 <div class="modal-body">
                     <div class="profile-section">
                         <!-- Ganti src dengan path ke foto profil Telegram Anda -->
-                        <img src="profile.jpg" alt="Naufal Azra" class="profile-image" id="profile-image">
+                        <img src="3.png" alt="Naufal Azra" class="profile-image" id="profile-image">
                         <h2 class="profile-name">Naufal Azra</h2>
                         <p class="profile-bio">Developer AZRA-X AI Assistant</p>
                         <button class="telegram-btn" id="telegram-btn">
