--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         
         // Open Telegram
         function openTelegram() {
-            window.open('https://t.me/yourtelegram', '_blank');
+            window.open('https://t.me/naufalazraa', '_blank');
         }
         
         // Load chat history
