--- a/index.html
+++ b/index.html
@@ -861,8 +861,8 @@
 
     <script>
         // API Configuration - GANTI DENGAN API KEY ANDA
-        const API_KEY = "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";
-        const API_URL = "https://platform.openai.com/";
+        const API_KEY = "AIzaSyD7u_COjnjU7K-DpaKYhDAB3_AEjHOOqS0";
+        const API_URL = "https://generativelanguage.googleapis.com/v1beta/";
         
         // System prompt untuk kalibrasi AI
         const SYSTEM_PROMPT = "Kamu adalah AI buatan Naufal Azra yang bernama AZRA-X. Kamu adalah asisten AI yang ramah, membantu, dan profesional. Berikan respons yang jelas, informatif, dan relevan. Untuk kode pemrograman, berikan contoh yang lengkap dan terstruktur dengan baik.";
