--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <!-- Ganti src dengan path logo AZRA-X Anda -->
-                    <img src="azra-logo.jpg" alt="AZRA-X" class="logo-img">
+                    <img src="3.png" alt="AZRA-X" class="logo-img">
                     <div class="logo-text">AZRA-X</div>
                 </div>
             </div>
@@ -897,7 +897,7 @@
                 <!-- Welcome screen -->
                 <div class="welcome-container" id="welcome-screen">
                     <!-- Ganti src dengan path logo AZRA-X Anda -->
-                    <img src="azra-logo.jpg" alt="AZRA-X" class="welcome-logo">
+                    <img src="3.png" alt="AZRA-X" class="welcome-logo">
                     <h1 class="welcome-title">Hai, saya AZRA-X</h1>
                     <p class="welcome-subtitle">Saya adalah asisten AI yang dibuat oleh Naufal Azra. Saya siap membantu Anda dengan berbagai pertanyaan, penulisan kode, analisis, dan banyak lagi.</p>
                 </div>
@@ -941,7 +941,7 @@
                 <div class="modal-body">
                     <div class="profile-section">
                         <!-- Ganti src dengan path foto profil Telegram Anda -->
-                        <img src="profile.jpg" alt="Naufal Azra" class="profile-img">
+                        <img src="3.png" alt="Naufal Azra" class="profile-img">
                         <h3 class="profile-name">Naufal Azra</h3>
                         <p class="profile-bio">Developer AZRA-X AI Assistant</p>
                         <a href="https://t.me/naufalazra" class="telegram-btn" target="_blank">
@@ -988,7 +988,7 @@
     <script>
         // API Configuration
         // GANTI API_KEY dengan API key Gemini Anda
-        const API_KEY = "AIzaSyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"; // Ganti dengan API key Anda
+        const API_KEY = "AIzaSyA1NzQE-ceB5W3RRZbk2zVAcnqOi0mmwMs"; // Ganti dengan API key Anda
         const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${API_KEY}`;
         
         // System prompt untuk kalibrasi AI
