--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
                         <img src="3.png" alt="Naufal Azra" class="profile-img">
                         <h3 class="profile-name">Naufal Azra</h3>
                         <p class="profile-bio">Developer AZRA-X AI Assistant</p>
-                        <a href="https://t.me/naufalazra" class="telegram-btn" target="_blank">
+                        <a href="https://t.me/naufalazraa" class="telegram-btn" target="_blank">
                             <i class="fab fa-telegram"></i>
                             Telegram Saya
                         </a>
