--- a/index.html
+++ b/index.html
@@ -988,8 +988,8 @@
     <script>
         // API Configuration
         // GANTI API_KEY dengan API key Gemini Anda
-        const API_KEY = "AIzaSyABVoxiFI-7BbxGa7NAyHDO1ZBFJvGa06c"; // Ganti dengan API key Anda
-        const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${API_KEY}`;
+        const API_KEY = "AIzaSyB7URXCSpZtdCdKCjBGkvV27nLURDDn1FM"; // Ganti dengan API key Anda
+        const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent=${API_KEY}`;
         
         // System prompt untuk kalibrasi AI
         const SYSTEM_PROMPT = "Kamu adalah AI buatan Naufal Azra yang bernama AZRA-X. Kamu adalah asisten AI yang ramah, membantu, dan profesional. Berikan respons yang jelas, informatif, dan relevan. Untuk kode pemrograman, berikan contoh yang lengkap dan terstruktur dengan baik.";
