--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     <div class="container">
         <!-- Header dengan Logo dan Waktu -->
         <div class="header">
-            <div class="logo">AZRA-X</div>
+            <div class="logo">AZRA-X V BETA</div>
             <div class="datetime">
                 <div class="date" id="date">Selasa, 23 Desember 2025</div>
                 <div class="time" id="time">14:30:45</div>
