--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
                     </div>
                     <div class="chat-input-container">
                         <textarea class="chat-input" id="chatInput" 
-                                  placeholder="Ketik pesan Anda di sini... (Shift+Enter untuk baris baru, Enter untuk mengirim)"
+                                  placeholder="Ketik perintah mu bro..."
                                   rows="1"></textarea>
                         <button class="chat-send-btn" id="sendChatBtn">
                             <i class="fas fa-paper-plane"></i>
